--- a/Blacksmithing/Blacksmithing.csproj
+++ b/Blacksmithing/Blacksmithing.csproj
@@ -69,8 +69,8 @@
             <SpecificVersion>false</SpecificVersion>
             <HintPath>$(GamePath)\BepInEx\core\BepInEx.dll</HintPath>
         </Reference>
-        <Reference Include="ExtendedItemDataFramework, Version=1.0.7.0, Culture=neutral, PublicKeyToken=null">
-            <HintPath>$(GamePath)\BepInEx\plugins\ExtendedItemDataFramework.dll</HintPath>
+        <Reference Include="ItemDataManager">
+            <HintPath>Libs\ItemDataManager.dll</HintPath>
         </Reference>
         <Reference Include="ServerSync, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
             <HintPath>Libs\ServerSync.dll</HintPath>
@@ -96,6 +96,7 @@
     <ItemGroup>
         <EmbeddedResource Include="icons\blacksmithing.png"/>
         <Content Include="ILRepack.targets"/>
+        <Content Include="Libs\ItemDataManager.dll"/>
         <Content Include="Libs\ServerSync.dll">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
